--- a/cart.html
+++ b/cart.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/cart.css">
+    <link rel="stylesheet" href="./styles/cart.css">
    
 </head>
 <body>
@@ -97,4 +97,4 @@
 </body>
 </html>
 <!-- <script type="module" src="/cart.js"></script> -->
-<script src="/cart.js"></script>
+<script src="./scripts/cart.js"></script>
