navbar and footer added on index page

--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
     integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/styles/rishabh.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+    <script
+      src="https://kit.fontawesome.com/24c494a6b6.js"
+      crossorigin="anonymous"
+    ></script>
+
 </head>
 <body>
     <!-- navbar  start -->
-  <div id="navbar"></div>
+  <div id="navbar_main"></div>
     <!-- navbar end -->
 
 
@@ -207,11 +215,11 @@
 
 
     <!-- footer  start -->
-  <div id="footer"></div>
+  <div id="footer_main"></div>
 
     <!-- footer end -->
 
 
 </body>
 </html>
-<script src="/scripts/index.js"></script>
+<script type="module" src="/scripts/index.js"></script>
