--- a/otp.html
+++ b/otp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/otp.css">
+    <link rel="stylesheet" href="./styles/otp.css">
     <title>Anthropologie Women's CLothing, Accesories & Home</title>
     <link rel="icon"
     href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1QFXizHW4skIPtOpI9nmjdLZercU-9osBNoOgIk0&usqp=CAU"
@@ -38,4 +38,4 @@
     
 </body>
 </html>
-<script src="/scripts/otp.js"></script>
+<script src="./scripts/otp.js"></script>
