--- a/sign_up.html
+++ b/sign_up.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/sign_up.css">
+    <link rel="stylesheet" href="styles/sign_up.css">
     <link rel="icon"
     href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1QFXizHW4skIPtOpI9nmjdLZercU-9osBNoOgIk0&usqp=CAU"
     type="image/x-icon">
@@ -574,4 +574,4 @@
     
 </body>
 </html>
-<script src="/scripts/signup.js"></script>
+<script src="./scripts/signup.js"></script>
