shipra ka chnage

--- a/bed.html
+++ b/bed.html
@@ -88,7 +88,7 @@
 
                 <div class="sh-sortby">
                     <p id="sh-hp">Sort:</p>
-                    <select id="sh-sort" onchange="sort()">
+                    <select id="sh-sort">
                         <option value="feature">Featured</option>
                         <option value="low">Price: Low to High</option>
                         <option value="high">Price: High to Low</option>
