--- a/checkout.html
+++ b/checkout.html
@@ -626,5 +626,5 @@ ul {
    </div>
 </body>
 </html>
-<script type="module" src="/scripts/checkout.js"></script>
+<script type="module" src="scripts/checkout.js"></script>
 
