--- a/payment.html
+++ b/payment.html
@@ -618,4 +618,4 @@ ul {
     </div>
 </body>
 </html>
-<script type="module" src="./scripts/payment.js"></script>
+<script type="module" src="scripts/payment.js"></script>
