--- a/pickup.html
+++ b/pickup.html
@@ -499,7 +499,7 @@ ul {
              <p id="sorr">Sorry -  gift wrap is unavailable with Store Pickup and Collection Point orders.</p>
             <div id="zipdis">
                 <div>
-                    <p>CIty or ZIO Code*</p>
+                    <p>City or ZIP Code*</p>
                     <input type="text" id="code">
                 </div>
                 <div >
