--- a/success.html
+++ b/success.html
@@ -310,12 +310,12 @@ ul {
 <body>
   <div id="navbar_main"></div>
     <div>
-        <h3>Thans for Purchase</h3>
+        <h3>Thanks for Purchase</h3>
         <h3 id="ord"></h3>
-        <p>Redirecting you to home page Please wait....</p>
+        <p>Redirecting you to home page Please wait for 2 seconds...</p>
     </div>
     <div id="footer_main">
 
 </body>
 </html>
-<script type="module" src="/scripts/success.js"></script>
+<script type="module" src="scripts/success.js"></script>
