--- a/payment.html
+++ b/payment.html
@@ -507,6 +507,13 @@ ul {
     color: #829cae;
     background-color: #f7f6f2;
 }
+#red{
+    color: red;
+}
+#strike{
+    color: red;
+    text-decoration: line-through;
+}
         
     </style>
 </head>
