--- a/success.html
+++ b/success.html
@@ -312,7 +312,7 @@ ul {
     <div>
         <h3>Thanks for Purchase</h3>
         <h3 id="ord"></h3>
-        <p>Redirecting you to home page Please wait for 2 seconds...</p>
+        <p id="redirect"></p>
     </div>
     <div id="footer_main">
 
