--- a/pickup.html
+++ b/pickup.html
@@ -475,6 +475,13 @@ ul {
     color: #829cae;
     background-color: #f7f6f2;
 }
+#red{
+    color: red;
+}
+#strike{
+    color: red;
+    text-decoration: line-through;
+}
     </style>
 </head>
 <body>
